<?xml version="1.0"?>
<package>
  <name>gazebocontrolsim</name>
  <version>0.3.0</version>
  <description>The gazebocontrolsim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="qi.shield95@foxmail.com">Qi</author>
  <maintainer email="qi.shield95@foxmail.com">Qi</maintainer>


  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
  <run_depend>mutifingerhand_qi_urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
